--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cloudinary": "^1.28.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-jwt": "^6.1.1",
